--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,13 @@ html {
   background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   overflow: hidden;
 }
+
+.boundingBox {
+  position: absolute;
+  border: 3px solid rgb(102, 243, 102);
+  box-shadow: 0 0 0 3px #3a8ae6 inset;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  cursor: pointer;
+}
